5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1758_1187.log
== TEST (2019-05-28 11:51:24) 
-- CODE:
from  numpy import*

s = array(input("s: "))

print(s[0])
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:52:06) 
-- CODE:
from  numpy import*

s = array(eval(input("s: ")))

print(s[0])
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:52:25) 
-- CODE:
from  numpy import*

s = array(str(input("s: ")))

print(s[0])
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:52:54) 
-- CODE:
from  numpy import*

s = array(str(input("s: ")))

print(s(0))
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:53:30) 
-- CODE:
from numpy import*

s = str(input("s: "))

print(s(0))
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:01) 
-- CODE:
from math import*

s = str(input("s: "))

print(s(0))
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(s(0))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:19) 
-- CODE:
from math import*

s = str(input("s: "))

print(s[0])
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(size(s))
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:23) 
-- CODE:
from math import*

s = str(input("s: "))

print(s[0])
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(size(s))
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:26) 
-- CODE:
from math import*

s = str(input("s: "))

print(s[0])
print(s[-1])
print(size(s))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(size(s))
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:47) 
-- CODE:
from math import*

s = str(input("s: "))

print(s[0])
print(s[-1])
print(size[s])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(size[s])
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:57:59) 
-- CODE:
from math import*

s = str(input("s: "))

print(s[0])
print(s[-1])


-- OUTPUT:
I
C
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:58:36) 
-- CODE:
from math and numpy import*

s = str(input("s: "))

print(s[0])
print(s[-1])
print(size(s))

-- ERROR:
File "XXXX", line 1
    from math and numpy import*
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
